# prefect

./: .gitmodules  README.md  annual_mean_dtr.py  annual_mean_pr.py  beetle_risk.py  crrel_gipl_outputs.py  degree_days_below_zero.py  design_freezing_index.py  design_thawing_index.py  dot_precip.py  freezing_index.py  gipl_ingest.py  heating_degree_days.py  ingest_tasks.py  pyproject.toml  thawing_index.py
ardac_nbs/: README.md  ardac_nb_functions.py  generate_ardac_nbs.py
bias_adjust/: bias_adjust.py  bias_adjustment.py  convert_cmip6_to_zarr.py  convert_era5_to_zarr.py  netcdf_to_zarr.py  train_bias_adjustment.py
cmip6_derived/: dtr_common_grid.py
downscaling/: README.md  convert_cmip6_to_zarr.py  convert_era5_to_zarr.py  downscale_cmip6.py
drought/: run_drought_pipeline.py
era5_4km/: README.md  archive_era5.py  archive_era5_simple.py  curate_era5_4km.py  curation_functions.py
fire_layers/: current_fire_layers.py  current_fires.py  environment.yaml  fire_layer_tasks.py  get_current_fire_layers.py  get_current_fires.py
hsia/: README.md  generate_annual_hsia_rasdaman_data.py  hsia_tasks.py
indicators/: README.md  generate_indicators.py  indicator_functions.py
pipelines/: cmip6_dtr.py  config.py  dtr_common_grid.py  resample_regrid_wrf_era5.py  wrf_era5_dtr.py
rasdaman/: air_freezing_index_Fdays.py  air_thawing_index_Fdays.py  alfresco_relative_flammability_30yr.py  alfresco_vegetation_mode_statistic.py  alfresco_vegetation_type_percentage.py  annual_mean_dtr.py  annual_mean_pr.py  annual_mean_snowfall.py  annual_mean_tas.py  annual_mean_temp.py  (+37 more)
(+68 files in other folders)
