[project]
name = "utils"
version = "0.1.0"
description = "Prefect flows for SNAP data processing pipelines"
requires-python = "==3.11.*"
dependencies = [
  "prefect==2.14.2",
  "griffe<1.0.0",
  "cachetools>=7.0.5",
  "paramiko>=4.0.0",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
